added boilerplate code for google maps api
