# src/controllers/DataMallController.ts
@@ -1,11 +1,13 @@
 import { Controller, Route, Get } from "tsoa";
 import log from "npmlog";
+import { Response } from "node-fetch";
 import DataMallConnector from "../api/DataMallConnector";
+import { STATUS } from "./enums";
 
 @Route("datamall")
 export class DataMallController extends Controller {
   @Get("busroute/{skipValue}")
-  public async getBusRoutes(skipValue?: number): Promise<Response | undefined> {
+  public async getBusRoutes(skipValue?: number): Promise<Response> {
     let response;
     try {
       const conn = new DataMallConnector();
@@ -13,7 +15,12 @@ export class DataMallController extends Controller {
     } catch (e) {
       log.error("getBusRoutes", "Failed to retrieve bus routes from LTA", e);
     }
-    return response;
+    if (response) {
+      this.setStatus(STATUS.OK);
+      return response;
+    }
+    this.setStatus(STATUS.INTERNAL_SERVER_ERROR);
+    throw new Error(`Failed to retrieve the bus routes`);
   }
 
   @Get("carparkavailability/{skipValue}")
@@ -31,6 +38,11 @@ export class DataMallController extends Controller {
         e
       );
     }
-    return response;
+    if (response) {
+      this.setStatus(STATUS.OK);
+      return response;
+    }
+    this.setStatus(STATUS.INTERNAL_SERVER_ERROR);
+    throw new Error(`Failed to retrieve the bus routes`);
   }
 }
